# AutmatingECM

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
ECM/: CMakeLists.txt
ECM/include/ECM/: AMBFWrapper.h  AutomatingECM.h  Control.h  DH.h  Dynamics.h  JointKinematics.h  Kinematics.h  PathPlanning.h  Quintic.h  Utilities.h
ECM/src/: AMBFWrapper.cpp  AutomatingECM.cpp  Control.cpp  DH.cpp  Dynamics.cpp  Kinematics.cpp  PathPlanning.cpp  Quintic.cpp  Utilities.cpp  main.cpp
Envision/: CMakeLists.txt  Envision.h
Envision/PCH/include/PCH/: pch.h
Envision/include/Envision/: Application.h  EntryPoint.h  Log.h
Envision/src/: Application.cpp  Log.cpp
PCH/include/PCH/: pch.h
ROSTOML/: client.py  server.py
UnityECM/Assets/: DynamicBeam.cs  ECM.fbx  MeshingScript.cs  controller.unity  msgbrowser_settings.asset
UnityECM/Assets/MagicLeap/Core/Assets/Materials/: Ground.mat  MeshingOff.mat
UnityECM/Assets/ROS/src/ambf_msgs/msg/: ECMMoveitJoints.msg
UnityECM/Assets/ROS/src/ambf_msgs/srv/: ECMMoverService.srv
UnityECM/Assets/ROS/src/niryo_one_ros/niryo_one_description/meshes/v1/stl/: arm_link.prefab  base_link.prefab  elbow_link.prefab  forearm_link.prefab  hand_link.prefab  shoulder_link.prefab  wrist_link.prefab
UnityECM/Assets/ROS/src/niryo_one_ros/niryo_one_description/meshes/v2/stl/: arm_link.prefab  base_link.prefab  elbow_link.prefab  forearm_link.prefab  hand_link.prefab  shoulder_link.prefab  wrist_link.prefab
UnityECM/Assets/ROS/src/niryo_one_urdf/Gripper1/: G1_ClampLeft.prefab  G1_ClampRight.prefab  G1_MainSupport.prefab  G1_Rod.prefab  G1_ServoHead.prefab
UnityECM/Assets/ROS/src/niryo_one_urdf/meshes/stl/: arm_link.prefab  base_link.prefab  elbow_link.prefab  forearm_link.prefab  hand_link.prefab  shoulder_link.prefab  wrist_link.prefab
UnityECM/Assets/Resources/: ROSConnectionPrefab.prefab
UnityECM/Assets/RosMessages/Ambf/msg/: ECMMoveitJoints.cs
UnityECM/Assets/RosMessages/EcmMoveit/msg/: ECMMoveitJoints.cs
UnityECM/Assets/Scripts/: ECMSourceDestinationPublisher.cs
UnityECM/ProjectSettings/: ProjectSettings.asset
cmake/: FindAMBFClient.cmake  FindAMBFMSGS.cmake  Findambf_client.cmake  Findrbdl_model.cmake  ambf_commConfig.cmake  ambf_msgs-genmsg.cmake  ambf_msgs-msg-paths.cmake  ambf_msgsConfig.cmake
cmake/modules/: FindAMBF_CLIENT.cmake  FindEigen3.cmake  Findspdlog.cmake
ecm_manupulation/: CMakeLists.txt  package.xml
ecm_manupulation/include/ecm_manupulation/: AMBFClient.h  Dynamics.h  ECM.h  Kinematics.h  Utilities.h  ecm_kinematics.h
ecm_manupulation/src/: AMBFClient.cpp  DH.cpp  Dynamics.cpp  ECM.cpp  Kinematics.cpp  Utilities.cpp  main.cpp
ecm_manupulation_modules/: CMakeLists.txt  package.xml
ecm_manupulation_modules/ecm_kinematics/: CMakeLists.txt  package.xml
ecm_manupulation_modules/ecm_kinematics/include/ecm_kinematics/: ECM.h
ecm_manupulation_modules/ecm_kinematics/src/: DH.cpp  ECM.cpp  Utilities.cpp
matlab/: CS223A_HW5  CS223A_HW5.m  CalcuateDerivative.m  ECM.asv  ECM.m  ECMV2.asv  ECMV2.m  HW2_Q1.m  PUMAPID.slx  Puma.m  RPManipulator2.asv  RPSprialManipulator.m  SprintDamper.slx
rbdl_model_tests/: CMakeLists.txt
rbdl_model_tests/include/rbdl_model_tests/: EigenUtilities.h  Kuka.h  RBDLTestPrep.h
rbdl_model_tests/src/: EigenUtilities.cpp  KukaBodyTests.cc  KukaHCKinematicsTests.cc  KukaKinematicsTests.cc  RBDLTestPrep.cc
scripts/: 00-setup.sh  01-build.sh  02-make.sh  03-run_ECMControl_app.sh  03-run_Trial_app.sh
surgeon_gestures/: CMakeLists.txt  package.xml
surgeon_gestures/include/surgeon_gestures/: EndoScopePointCloud.h
surgeon_gestures/src/: EndoScopePointCloud.cpp  rotate_point_cloud.cpp  rotate_point_cloud.h
tests/: CMakeLists.txt  CMakeLists.txt.user.5af94c2
